@@ -61,6 +61,26 @@ ligne de quittance pour lequel on calcule la commission</field>
 de quittance pour lequel on calcule la commission</field>
             <field name="parent" ref="dossier_commission"/>
         </record>
+        <record model="rule_engine.function" id="date_debut_ligne_commission">
+            <field name="translated_technical_name">date_debut_ligne_commission</field>
+            <field name="description">Date de début de la ligne de commission</field>
+            <field name="type">function</field>
+            <field name="language" ref="ir.lang_fr"/>
+            <field name="namespace">rule_engine.runtime</field>
+            <field name="name">_re_commission_start_date</field>
+            <field name="long_description">Date de début de la ligne de commission. Cette date peut être différente de la date de début de la ligne de quittance dans le cas où des dates de calcul ont été définies sur le plan de commissionnement</field>
+            <field name="parent" ref="dossier_commission"/>
+        </record>
+        <record model="rule_engine.function" id="date_fin_ligne_commission">
+            <field name="translated_technical_name">date_fin_ligne_commission</field>
+            <field name="description">Date de fin de la ligne de commission</field>
+            <field name="type">function</field>
+            <field name="language" ref="ir.lang_fr"/>
+            <field name="namespace">rule_engine.runtime</field>
+            <field name="name">_re_commission_end_date</field>
+            <field name="long_description">Date de fin de la ligne de commission. Cette date peut être différente de la date de fin de la ligne de quittance dans le cas où des dates de calcul ont été définies sur le plan de commissionnement</field>
+            <field name="parent" ref="dossier_commission"/>
+        </record>
         <record model="rule_engine.context-function" id="cte_commission_data">
             <field name="context" ref="commission_context"/>
             <field name="tree_element" ref="dossier_commission"/>
