@@ -1,3 +1,4 @@
+# FEA#7665 Allow to use commission start and end date in rule engine when calculation date are defined in a commission plan
 * BUG#7514 Restore commission relate from contract/invoice
 
 Version 1.14 - 2017-11-09
